--- a/config.yaml
+++ b/config.yaml
@@ -10,11 +10,11 @@ options:
     default: ""
     description: |
       When the image is behind a private repository, this is the username to log into the docker repo.
-  secret:
+  password:
     type: string
     default: ""
     description: |
-      When the image is behind a private repository, this is the secret to log into the docker repo.
+      When the image is behind a private repository, this is the password to log into the docker repo.
   ports:
     type: string
     default: ""
@@ -26,3 +26,13 @@ options:
       Example usage:
       8080: "expose"
       8443: ""
+  docker-registry:
+    type: string
+    default: ""
+    description: |
+      Private Docker registry FQDN. Needed when deploying to Kubernetes and image is behind a private repository.
+  docker-email:
+    type: string
+    default: ""
+    description: |
+      Docker email. Needed when deploying to Kubernetes and image is behind a private repository.
