--- a/config.yaml
+++ b/config.yaml
@@ -35,4 +35,4 @@ options:
     type: string
     default: ""
     description: |
-      The email for the registry account. Needed when the image is behind a private repository.
+      Email of the docker user. Needed when the image is behind a private repository.
